# nnlm

./: Cargo.toml  README.md
src/: gmm.rs  kernel.rs  lib.rs  perceptron.rs  rbf.rs
